--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,12 @@
 		    <artifactId>flying-saucer-pdf</artifactId>
 		    <version>9.1.11</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
